--- a/index.html
+++ b/index.html
@@ -4,15 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cow</title>
+    <link rel="icon" type="image/x-icon" href="img/moo.png">
+    <title>Moo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div>
-        <h1>Legendary farm<br>game in your hands</h1>
-        <p>Play as a Helga the Cow to protect your animal friends from the Farmer</p>
-        <a href="#">Buy now</a>
+<header class="header" id="header">
+    <div class="container">
+        <img src="img/logo.png" alt="Moo" class="logo">
+        <div class="offer-wrapper">
+            <div class="offer">
+                <h1>Legendary farm game in your hands</h1>
+                <p class="introtext">Play as a Helga the Cow to protect your animal friends from the Farmer</p>
+
+                <a href="#" class="btn">Play now</a>
+            </div>
+            <img src="img/moo.png" alt="Cow is lost">
+        </div>
     </div>
-    <img src="img/moo.png" alt="moo">
+</header>
+<section class="features" id="features">
+    <div class="container">
+        <h2>What`s inside the game</h2>
+        <div class="digits">
+            <div class="digit-item">
+                <span class="digit"><img src="img/run.png" alt="run is lost"></span>
+                <div class="digit-wrap">
+                    <h3 class="digit-title">Run as fast as you can</h3>
+                    <p class="digit-text">You have to be very fast to not be caught by the Farmer</p>
+                </div>
+            </div>
+            <div class="digit-item">
+                <span class="digit"><img src="img/duck.png" alt="duck is lost"></span>
+                <div class="digit-wrap">
+                    <h3 class="digit-title">Protect your animal friends</h3>
+                    <p class="digit-text">You have so many friends – protect them all!</p>
+                </div>
+            </div>
+            <div class="digit-item">
+                <span class="digit"><img src="img/win.png" alt="win is lost"></span>
+                <div class="digit-wrap">
+                    <h3 class="digit-title">Score as much points as you can</h3>
+                    <p class="digit-text">In the end this is all about points. Show your strength!</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+<section class="practice" id="practice">
+    <div class="container">
+        <div class="practice-wrap">
+            <img src="img/ladybug.png" alt="ladybug" class="ladybug">
+            <div class="practice-block">
+                <h2 class="practice-title">
+                    More animals you save, closer your victory!
+                </h2>
+                <p class="practice-text">Don`t miss the chance to make the Farmer cry again. Animals, be strong!</p>
+                <a href="#" class="btn">Play now</a>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer" id="footer">
+    <div class="container">
+        <p class="footer-text">2030 Ⓒ All rights reserved</p>
+    </div>
+</footer>
 </body>
 </html>
